[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/GUI/BackToMainMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/fonts/arcade_40.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/GUI/MCButtons.gd" type="Script" id=3]

[node name="MazeCreatorScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 50.0
margin_top = 25.0
margin_right = 1250.0
margin_bottom = 625.0
columns = 5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="GridContainer"]
margin_right = 236.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button2" type="Button" parent="GridContainer"]
margin_left = 240.0
margin_right = 476.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button3" type="Button" parent="GridContainer"]
margin_left = 480.0
margin_right = 716.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button4" type="Button" parent="GridContainer"]
margin_left = 720.0
margin_right = 956.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button5" type="Button" parent="GridContainer"]
margin_left = 960.0
margin_right = 1196.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button6" type="Button" parent="GridContainer"]
margin_top = 120.0
margin_right = 236.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button7" type="Button" parent="GridContainer"]
margin_left = 240.0
margin_top = 120.0
margin_right = 476.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button8" type="Button" parent="GridContainer"]
margin_left = 480.0
margin_top = 120.0
margin_right = 716.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button9" type="Button" parent="GridContainer"]
margin_left = 720.0
margin_top = 120.0
margin_right = 956.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button10" type="Button" parent="GridContainer"]
margin_left = 960.0
margin_top = 120.0
margin_right = 1196.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button11" type="Button" parent="GridContainer"]
margin_top = 240.0
margin_right = 236.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button12" type="Button" parent="GridContainer"]
margin_left = 240.0
margin_top = 240.0
margin_right = 476.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button13" type="Button" parent="GridContainer"]
margin_left = 480.0
margin_top = 240.0
margin_right = 716.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button14" type="Button" parent="GridContainer"]
margin_left = 720.0
margin_top = 240.0
margin_right = 956.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button15" type="Button" parent="GridContainer"]
margin_left = 960.0
margin_top = 240.0
margin_right = 1196.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button16" type="Button" parent="GridContainer"]
margin_top = 360.0
margin_right = 236.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button17" type="Button" parent="GridContainer"]
margin_left = 240.0
margin_top = 360.0
margin_right = 476.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button18" type="Button" parent="GridContainer"]
margin_left = 480.0
margin_top = 360.0
margin_right = 716.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button19" type="Button" parent="GridContainer"]
margin_left = 720.0
margin_top = 360.0
margin_right = 956.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button20" type="Button" parent="GridContainer"]
margin_left = 960.0
margin_top = 360.0
margin_right = 1196.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button_X0Y0_Start" type="Button" parent="GridContainer"]
margin_top = 480.0
margin_right = 236.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
disabled = true
text = "start"

[node name="Button22" type="Button" parent="GridContainer"]
margin_left = 240.0
margin_top = 480.0
margin_right = 476.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button23" type="Button" parent="GridContainer"]
margin_left = 480.0
margin_top = 480.0
margin_right = 716.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button24" type="Button" parent="GridContainer"]
margin_left = 720.0
margin_top = 480.0
margin_right = 956.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="Button25" type="Button" parent="GridContainer"]
margin_left = 960.0
margin_top = 480.0
margin_right = 1196.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Test"

[node name="MCBackButton" type="Button" parent="."]
margin_left = 50.0
margin_top = 640.0
margin_right = 250.0
margin_bottom = 700.0
custom_fonts/font = ExtResource( 2 )
text = "Back"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmButton" type="Button" parent="."]
margin_left = 1046.0
margin_top = 640.0
margin_right = 1247.0
margin_bottom = 700.0
custom_fonts/font = ExtResource( 2 )
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MCBackButton" to="MCBackButton" method="_on_MCBackButton_pressed"]
