[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Menu Scenes/Select_Character/CharacterDisplay.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/images/Character/Face sprite/5.png" type="Texture" id=2]
[ext_resource path="res://Resources/images/Character/Face sprite/18.png" type="Texture" id=3]
[ext_resource path="res://Resources/fonts/ARCADECLASSIC.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/GUI/BackToMainMenu.gd" type="Script" id=5]
[ext_resource path="res://Resources/images/Character/Face sprite/14.png" type="Texture" id=6]
[ext_resource path="res://Resources/Main GUI Images/BG/BG4.jpg.png" type="Texture" id=7]
[ext_resource path="res://Resources/Button Styles/main_menu_button_pressed.tres" type="StyleBox" id=8]
[ext_resource path="res://Resources/Button Styles/main_menu_button_normal.tres" type="StyleBox" id=9]
[ext_resource path="res://Resources/Button Styles/main_menu_button_hover.tres" type="StyleBox" id=10]
[ext_resource path="res://Resources/Button Styles/main_menu_button_disabled.tres" type="StyleBox" id=11]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 4 )

[node name="CharacterSelection" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 640.763, 356.54 )
texture = ExtResource( 7 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 260.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="Control" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 281.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharacterDisplay" parent="VBoxContainer/CenterContainer" instance=ExtResource( 1 )]

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 285.0
margin_right = 1280.0
margin_bottom = 566.0
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 565.0
margin_bottom = 281.0
size_flags_horizontal = 3

[node name="WarriorButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/CenterContainer"]
margin_left = 211.0
margin_top = 69.0
margin_right = 353.0
margin_bottom = 211.0
rect_min_size = Vector2( 142, 142 )
texture_normal = ExtResource( 3 )
expand = true

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 569.0
margin_right = 711.0
margin_bottom = 281.0

[node name="AverageButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/CenterContainer3"]
margin_top = 69.0
margin_right = 142.0
margin_bottom = 211.0
rect_min_size = Vector2( 142, 142 )
texture_normal = ExtResource( 6 )
expand = true

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 715.0
margin_right = 1280.0
margin_bottom = 281.0
size_flags_horizontal = 3

[node name="ThiefButton" type="TextureButton" parent="VBoxContainer/HBoxContainer/CenterContainer2"]
margin_left = 211.0
margin_top = 69.0
margin_right = 353.0
margin_bottom = 211.0
rect_min_size = Vector2( 142, 142 )
texture_normal = ExtResource( 2 )
expand = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 570.0
margin_right = 1280.0
margin_bottom = 620.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 545.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="SelectWarrior" type="Button" parent="VBoxContainer/HBoxContainer2/CenterContainer"]
margin_left = 181.0
margin_right = 363.0
margin_bottom = 50.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.356863, 0.105882, 0.211765, 1 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 1, 0.662745, 0.635294, 1 )
disabled = true
text = "SELECT"

[node name="CenterContainer3" type="CenterContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 549.0
margin_right = 731.0
margin_bottom = 50.0

[node name="SelectAverage" type="Button" parent="VBoxContainer/HBoxContainer2/CenterContainer3"]
margin_right = 182.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 1023.64, 182.946 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.356863, 0.105882, 0.211765, 1 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 1, 0.662745, 0.635294, 1 )
disabled = true
text = "SELECT"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 735.0
margin_right = 1280.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="SelectThief" type="Button" parent="VBoxContainer/HBoxContainer2/CenterContainer2"]
margin_left = 181.0
margin_right = 363.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 1011.61, 246.585 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.356863, 0.105882, 0.211765, 1 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 1, 0.662745, 0.635294, 1 )
disabled = true
text = "SELECT"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 620.0
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CSBackButton" type="Button" parent="CenterContainer"]
margin_left = 571.0
margin_top = 25.0
margin_right = 709.0
margin_bottom = 75.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/normal = ExtResource( 9 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.662745, 0.635294, 1 )
custom_colors/font_color_hover = Color( 0.4, 0.0156863, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 1, 0.662745, 0.635294, 1 )
text = "Back"
script = ExtResource( 5 )
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer/WarriorButton" to="VBoxContainer/CenterContainer/CharacterDisplay" method="_on_WarriorButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer3/AverageButton" to="VBoxContainer/CenterContainer/CharacterDisplay" method="_on_AverageButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer2/ThiefButton" to="VBoxContainer/CenterContainer/CharacterDisplay" method="_on_ThiefButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CenterContainer/SelectWarrior" to="VBoxContainer/CenterContainer/CharacterDisplay" method="_on_SelectWarrior_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CenterContainer3/SelectAverage" to="VBoxContainer/CenterContainer/CharacterDisplay" method="_on_SelectAverage_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/CenterContainer2/SelectThief" to="VBoxContainer/CenterContainer/CharacterDisplay" method="_on_SelectThief_pressed"]
[connection signal="pressed" from="CenterContainer/CSBackButton" to="CenterContainer/CSBackButton" method="_on_CSBackButton_pressed"]
